<?xml version="1.0"?>
<package>
  <name>ridgeback_yumi_optodaq</name>
  <version>0.0.0</version>
  <description>Optoforce 6-axis F/T sensors launchers for Ridgeback YuMi (The Yumimobile).</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>optoforce_etherdaq_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tinyxml</build_depend>
  
  <run_depend>curl</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>optoforce_etherdaq_driver</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tinyxml</run_depend>


  <export>
  </export>
</package>
